<resources>
    <string name="app_name">싸피월드</string>
    <string name="kakao_native_app_key">4674876d3a4a4de70110fc7745ed039f</string>
    <string name="google_map_api_key">AIzaSyCJzBAuClwnUegX4yf7Q-VHCp3AcJq_gb8</string>

    <!-- Naming Rules -->
    <!-- 도메인명_컴포넌트함축어_용도(=목적) -->

    <!-- Login & Register -->
    <string name="login_tv_title">SSAFY WORLD</string>
    <string name="login_et_id">아이디</string>
    <string name="login_et_pwd">비밀번호</string>
    <string name="register_et_pwd_check">비밀번호 확인</string>
    <string name="login_btn_login">로그인</string>
    <string name="login_btn_register">회원가입</string>
    <string name="btn_send_message">채팅 보내기</string>
    <string name="login_tv_or">OR</string>
    <string name="login_tv_copyright">Copyright ssafy Corp All Rights reserved.</string>
    <string name="register_et_name">이름</string>
    <string name="register_et_nickname">닉네임</string>

    <string name="register_success_toast">회원가입에 성공했어요!</string>
    <string name="register_fail_toast">회원가입에 실패했어요.</string>
    <string name="login_success_toast">로그인에 성공했어요!</string>
    <string name="login_fail_toast">로그인에 실패했어요.</string>
    <string name="pemission_check"> 권한 요청 </string>
    <string name="permission_text">저장소 접근을 위한 권한이 필요합니다. 바로 이동할까요?</string>
    <string name="validation_btn">입장</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Bottom Nav -->
    <string name="nav_home_title">홈</string>
    <string name="nav_community_title">커뮤니티</string>
    <string name="nav_user_title">유저 목록</string>
    <string name="nav_chat_title">채팅</string>
    <string name="nav_mypage_title">마이페이지</string>
    <string name="message_hint">메시지를 입력해주세요</string>

    <!-- community -->
    <string name="community_title">제목을 입력하세요</string>
    <string name="community_content">싸피월드에 게시글을 작성해보세요</string>
    <string name="community_complete">완료</string>
    <string name="community_cancel">취소</string>
    <string name="community_yes">확인</string>
    <string name="comment_hint">댓글을 남겨주세요</string>
    <string name="reply">답글 달기</string>

    <string name="logout_text">로그아웃 하시겠습니까?</string>
    <string name="logout_complete">로그아웃 되었습니다</string>
    <string name="withdrawal_text">회원탈퇴 하시겠습니까?</string>
    <string name="withdrawal_complete">회원탈퇴 되었습니다</string>
    <string name="search_hint">검색어를 입력하세요</string>
    <string name="search_list_hint">게시글을 찾을 수 없어요</string>
    <string name="validation">인증번호를 입력해주세요</string>
    <string name="delete_text">정말 삭제하시겠습니까?</string>

    <!-- account & app & change-->
    <string name="change_porfile_title">프로필을 변경하시겠습니까?</string>
    <string name="change_tv_title">비밀번호를 바꿔주세요</string>
    <string name="change_tv_detail">기본 비밀번호를 입력하신 후 새 비밀번호를 입력하세요</string>
    <string name="account_manage">계정 관리</string>
    <string name="account_pwd">비밀번호</string>
    <string name="account_tv_currentPwd">현재 비빌번호</string>
    <string name="account_tv_newPwd">새 비빌번호</string>
    <string name="account_btn_changePwd">비빌번호 변경하기</string>
    <string name="account_tv_update">프로필이 변경되었습니다</string>
    <string name="account_logout">로그아웃</string>
    <string name="account_withdrawl">회원탈퇴</string>
    <string name="account_tv_updateUser">프로필 수정</string>
    <string name="account_tv_cancel">취소</string>
    <string name="account_tv_confirm">확인</string>
    <string name="account_tv_modify">완료</string>
    <string name="account_validation">인증코드 생성</string>
    <string name="app_info">앱정보</string>
    <string name="app_version">버전정보</string>
    <string name="app_licence">라이선스</string>
    <string name="app_permission">[마이페이지] > [권한 설정] 에서 권한을 설정해주세요.</string>
</resources>