<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center|top"
    android:paddingHorizontal="@dimen/_16sdp"
    android:paddingVertical="@dimen/_16sdp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/idTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_et_name"
        app:boxBackgroundColor="@color/light_gray"
        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
        app:boxCornerRadiusTopStart="@dimen/_10sdp"
        app:boxStrokeWidth="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pwdTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/register_et_nickname"
        app:boxBackgroundColor="@color/light_gray"
        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
        app:boxCornerRadiusTopStart="@dimen/_10sdp"
        app:boxStrokeWidth="0dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nickEditTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/register_complete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/community_complete"
        android:textStyle="bold"
        android:backgroundTint="@color/light_gray"
        android:textColor="@color/dark_gray"
        app:cornerRadius="@dimen/_10sdp" />

</LinearLayout>